fix margin spacing after m-header. remove -30- from .poetry

--- a/_manuscript-core.css
+++ b/_manuscript-core.css
@@ -224,6 +224,9 @@ html, body { background-color: rgba(0,0,0,0); }
     font-family: var(--m-font-family-poetry);
     line-height: var(--m-line-spacing-poetry);
 }
+#manuscript section.m-poem pre {
+    margin-top: 0px;
+}
 #manuscript .x-poem pre,
 #manuscript section.m-poem pre {
     margin-bottom: var(--m-room-for-two);
@@ -513,7 +516,7 @@ html, body { background-color: rgba(0,0,0,0); }
 #manuscript section.m-scene:last-of-type::after { content: ""; }
 
 /* automated content for the -30- marker at the end */
-#manuscript > section:is(.m-part,.m-chapter,.m-scene,.m-poem):last-of-type::after {
+#manuscript:not(.poetry) > section:is(.m-part,.m-chapter,.m-scene):last-of-type::after {
     content: var(--m-30-);
     white-space: pre-wrap; /* enables functional escaping in the string */
     line-height: var(--m-line-spacing-single-plus);
